Save/Update files

--- a/source/localisation/achievements_l_english.yml
+++ b/source/localisation/achievements_l_english.yml
@@ -361,7 +361,7 @@
  NEW_ACHIEVEMENT_10_24_DESC:0 "コンドッティエーリを送った相手国と戦争状態になる。"
  NEW_ACHIEVEMENT_10_25_NAME:0 "時間泥棒"
  NEW_ACHIEVEMENT_10_25_DESC:0 "地図を他国から盗むのを成功させる。"
- NEW_ACHIEVEMENT_10_26_NAME:0 "わずかな助けで･･･"
+ NEW_ACHIEVEMENT_10_26_NAME:0 "わずかな助けで…"
  NEW_ACHIEVEMENT_10_26_DESC:0 "ラグーザとして、5か国以上が属する貿易同盟を率いて、オスマンの独立を保証する。"
  NEW_ACHIEVEMENT_10_27_NAME:0 "私の口座で眠っているだけ"
  NEW_ACHIEVEMENT_10_27_DESC:0 "ライバル国の役人を腐敗させる。"
