--- a/source/localisation/emperor_revolutions_l_english.yml
+++ b/source/localisation/emperor_revolutions_l_english.yml
@@ -32,7 +32,7 @@
  CHAIRMAN:0 "議長"
  CHAIRMAN_fem:0 "議長"
  revolution.31.name:0 "スペイン革命"
- revolution.31.desc:0 "革命がやってきた！暴徒は[Root.Capital.GetCapitalName]の王宮を襲撃し、[Root.Monarch.GetTitle][Root.Monarch.GetName]を捕え、逃げ出すことのできなかった他の王族と共に即座に処刑した。\n\n共和国は、スペインの各部門からの二人の代表者により構成され、著名な哲学者であり弁護士であるガスパール・メルチョール・デ・ホベリャーノスを筆頭とする新たな最高中央統治評議会により宣言された。評議会は農奴制を廃止すること、法の下の平等を確立すること、貴族の土地を国家と農民との間で再分配することを約束し、スペインとヨーロッパの他の地域を抑圧から解放された輝かしい未来へと導いている。"
+ revolution.31.desc:0 "革命がやってきた！暴徒は[Root.Capital.GetCapitalName]の王宮を襲撃し、[Root.Monarch.GetTitle][Root.Monarch.GetName]を捕え、逃げ出すことのできなかった他の王族と共に即座に処刑した。\n\n共和国は、スペインの各部門からの二人の代表者により構成され、著名な哲学者であり弁護士であるガスパール・メルチョール・デ・ホベリャーノスを筆頭とする新たな最高中央統治評議会により宣言された。評議会はスペインとヨーロッパの他の地域を抑圧から解放された輝かしい未来へと導くために、農奴制を廃止すること、法の下の平等を確立すること、貴族の土地を国家と農民との間で再分配することを約束している。"
  revolution.31.A:0 "革命万歳！"
  revolution.32.name:0 "[Root.GetAdjective]革命"
  revolution.32.desc.swedish:0 "The Revolution has arrived! It began with a coup staged by a group of noblemen - quickly gaining notoriety as the '[GetYear] års män', the 'Men of [GetYear]' - that forced [Root.Monarch.GetTitle] [Root.Monarch.GetName] to abdicate and go into exile. Although the conspirators had aimed to establish a constitutional monarchy, matters quickly escalated as a radical clique of lawyers, businessmen and liberals roused the mob through incendiary speeches inciting popular outrage against the monarch. The Royal Palace in [Root.Capital.GetCapitalName] was stormed, officials only able to look on in terror as one symbol of the old regime after the next was torn apart and a Republic was proclaimed.\n\nA 'Säkerhetstinget' or 'Thing of Public Safety' dominated by the radicals has taken over temporary control of the state. They promise to establish equality under the law and redistribute the nobility's land between the state and the peasantry, leading [Root.GetName] and the rest of Europe to a brighter future free from oppression."
@@ -42,7 +42,7 @@
  revolution.32.A.norwegian:0 "北欧を解放！"
  revolution.32.A.danish:0 "北欧を解放！"
  revolution.33.name:0 "ロンドン塔の嵐"
- revolution.33.desc:0 ""I lament to see the honor of the [Root.GetStateForm] sunk even to prostitution." For these impertinent words, [Root.Monarch.GetTitle] [Root.Monarch.GetName] had popular politician John Wilkes arrested and imprisoned. However, this sparked large protests in London, where crowds gathered behind the rallying cry of "For Wilkes and Liberty!" Officials read the Riot Act, instructing troops to fire on the protestors, but this served only to further enflame tensions as the crowd continued to swell. Protests soon rose up across the city and a large mob stormed the Tower of London, freeing all political prisoners. Led by Wilkes himself, the crowd then turned towards Buckingham Palace. The [Root.Monarch.GetTitle] was captured as [Root.Monarch.GetSheHe] attempted to flee the city and now faces trial for conspiracy against the [Root.GetAdjective] people, the verdict a foregone conclusion.\n\nA Revolutionary Committee led by Wilkes has taken over control of the new republic, promising to abolish serfdom, establish equality under the law and redistribute the nobility's land between the state and the peasantry, leading [Root.GetName] to a future guided by the ideals of liberty and the brotherhood of man."
+ revolution.33.desc:0 "「[Root.GetStateForm]の名誉が娼婦ほどにまで落ちぶれたのは嘆かわしいことだ。」この不敬な言葉を理由として、[Root.Monarch.GetTitle][Root.Monarch.GetName]は人気政治家のジョン・ウィルクスを逮捕、投獄させた。しかし、このことがロンドンでの大規模な抗議活動の引き金となり、「ウィルクスと自由のために！」というスローガンの下群衆が集まった。役人が騒擾取締令を読み上げ解散を命じ、抗議者に発砲するよう軍に命令したが、群衆が膨れ上がる中でさらなる緊張を煽るだけとなった。間もなく抗議の声が街中で上がり、大勢の暴徒がロンドン塔を襲撃し政治犯を解放した。ウィルクスその人に率いられ、群衆はバッキンガム宮殿へと向かった。[Root.Monarch.GetTitle]は[Root.Monarch.GetSheHe]が街から逃げ出そうとした時に捕らえられ、今[Root.GetAdjective]の人民に対する共謀の罪で裁判にかけられているが、評決がどうなるかは言うまでもない。\n\nウィルクスに率いられた革命委員会が新たな共和国の支配権を握っている。彼らは自由と人間の兄弟愛によって導かれた未来へと[Root.GetName]を導くために、農奴制を廃止すること、法の下の平等を確立すること、貴族の土地を国家と農民の間で再分配することを約束した。"
  revolution.33.A:0 "共和国万歳！"
  revolution.34.name:0 "[Root.GovernmentName]の陥落"
  revolution.34.desc:0 "The Revolution has arrived! Longstanding dissatisfaction at the lack of meaningful reforms by the government of the [Root.GovernmentName] boiled over as revolutionaries stormed the Topkapi Palace in [Root.Capital.GetCapitalName], capturing [Root.Monarch.GetTitle] [Root.Monarch.GetName]'s harem and the Royal Treasury. The [Root.Monarch.GetTitle] [Root.Monarch.GetHerselfHimself] attempted to flee but was unable to evade capture for long. [Root.Monarch.GetSheHeCap] was swiftly put to death for crimes against the people and the faith.\n\nThe Imperial Divan has been purged of all reactionaries and reorganized into the ruling council of the new Republic, which is now headed by self-styled Supreme Vizier [Root.new_supreme_vizier.GetName]. The new regime promises to abolish serfdom, establish equality under the law and redistribute the nobility's land between the state and the peasantry, so that all [Root.Religion.GetGroupName]s may be as brothers, free from oppression."
@@ -89,7 +89,7 @@
  center_of_revolution.7.A:0 "物事の自然な秩序が回復した。"
  center_of_revolution.8.name:0 "[revolutionary_province.GetName]の反革命派の人々"
  center_of_revolution.8.desc:0 "[revolution_target.GetAdjective]革命という破壊的な思想が [revolutionary_province.GetName]に定着し、自然の摂理を覆している。しかし、正しい考えを持つ貴族たちは、戦わずしてこの状況を受け入れようとはしない。彼らは力を結集し、もし我々が彼らに支援を与えるならば、革命家を[revolutionary_province.GetName]から追い出すことを約束している。"
- center_of_revolution.8.A:0 "They shall have our support."
+ center_of_revolution.8.A:0 "もちろんだ。我々は彼らを支援するべきだ。"
  center_of_revolution.8.B:0 "We will not disrupt the local administration."
  center_of_revolution.9.name:0 "[reactionary_province.GetName]の反動主義者！"
  center_of_revolution.9.desc:0 "Adherents of the old regime in [reactionary_province.GetName] have revealed themselves as the enemies of the people that they are. In a meticulously planned conspiracy, they have subverted members of the local militia and managed to secure the arrest of our administrators on spurious charges. They now claim it to be their duty to guide the people of [reactionary_province.GetName] through these troubled times, protecting them from the worst excesses of the revolutionary government. How should we deal with them?"
@@ -97,7 +97,7 @@
  center_of_revolution.9.B:0 "彼らに構う必要などない。"
  center_of_revolution.10.name:0 "Republican Scheming in [province_to_revolution.GetName]"
  center_of_revolution.10.desc:0 "Patriots in [own_revolutionary_province.GetName] have alerted us to an opportunity to spread the ideals of the Revolution. Republicans from [province_to_revolution.GetName] have approached them asking for [Root.GetAdjective] assistance in a coup against the reactionaries in charge of their province. However, the reactionaries are entrenched in [own_revolutionary_province.GetCapitalName], and they are unlikely to make headway without material support from us - something their [neighbour_country.GetAdjective] masters would surely not take kindly to."
- center_of_revolution.10.A:0 "They shall have our support."
+ center_of_revolution.10.A:0 "もちろんだ。我々は彼らを支援するべきだ。"
  center_of_revolution.10.B:0 "[neighbour_country.GetAdjective]の問題に介入すべきではない。"
  center_of_revolution.11.name:0 "[province_to_revolution.GetName]でのクーデター"
  center_of_revolution.11.desc:0 "Dangerous idealists espousing revolutionary thoughts have taken control of [province_to_revolution.GetName], driving out or executing those of our administrators who would not swear loyalty to their cause. Witnesses say well-known [From.GetAdjective] revolutionaries were among their number, although the [From.GetAdjective] delegate in [Root.Capital.GetCapitalName] denies any knowledge of the coup."
@@ -106,7 +106,7 @@
  opinion_non_intervention:0 "非介入主義"
  center_of_revolution.12.name:0 "[revolution_target.GetAdjective]からの亡命者が[Root.Capital.GetCapitalName]に到着"
  center_of_revolution.12.desc:0 "Many members of the [revolution_target.GetAdjective] nobility have fled to [Root.Capital.GetCapitalName] in order to escape the Revolution that has engulfed their country. They now offer to help [Root.Monarch.GetTitle] [Root.Monarch.GetName] end the revolutionary threat by restoring the rightful rulers of [revolution_target.GetName], a course of action which would conveniently restore them their former positions. Already, their arrival has bolstered anti-revolutionary feeling in our nation and even swayed some of those who had formerly toyed with dangerously progressive ideas."
- center_of_revolution.12.A:0 "They are most welcome here."
+ center_of_revolution.12.A:0 "彼らは大歓迎だ。"
  revolution.10.desc.nahuatl:0 "The Revolution has arrived! The [Root.GovernmentName] has collapsed under its own weight as the revolutionary masses stormed key government buildings. [Root.Monarch.GetTitle] [Root.Monarch.GetName] and his supporters among the [Root.GetNobilityOrFallbackName] have been rounded up and sacrificed to the Gods by the revolutionaries in the hope that their divine wrath may be abated by such eminent offerings.\n\nA purely temporary Committee of Public Safety has now been appointed to guide the new Republic through this revolutionary period. Threats abound, however, for monarchs and despots across the world fear they may suffer the same fate as the [Root.Monarch.GetTitle] and are already preparing for war against us. On the bright side, liberal forces are looking to us for assistance in their own struggles, so we will be able to gain support in such a manner."
  revolution.10.opt.nahuatl:0 "祭壇は共和国の敵の血で赤く染まるだろう！"
  revolution.39.name:0 "バタヴィア共和国"
@@ -210,17 +210,17 @@
  TURKEY_STRING_ADJ:0 "トルコ"
  REV_TURKEY_STRING:0 "革命トルコ"
  REV_TURKEY_STRING_ADJ:0 "トルコ"
- CHINA_STRING:0 "China"
- CHINA_STRING_ADJ:0 "Chinese"
- REV_CHINA_STRING:0 "Revolutionary China"
- REV_CHINA_STRING_ADJ:0 "Chinese"
+ CHINA_STRING:0 "中国"
+ CHINA_STRING_ADJ:0 "中国"
+ REV_CHINA_STRING:0 "革命中国"
+ REV_CHINA_STRING_ADJ:0 "中国"
  GURKANI_EMPIRE_STRING:0 "グーラカーン帝国"
  GURKANI_EMPIRE_STRING_ADJ:0 "グーラカーン"
  REV_GURKANI_EMPIRE_STRING:0 "革命グーラカーン帝国"
  REV_GURKANI_EMPIRE_STRING_ADJ:0 "グーラカーン"
  revolution.40.name:0 "天命による革命"
  revolution.40.desc:0 "革命がやってきた！もはやこの帝国は多くの民衆にとって何もできない国だと思われており、[Root.Capital.GetCapitalName]に集まった群衆が何千年も続いてきた帝国体制の終焉を要求している。当初は憲法により[Root.Monarch.GetTitle]の権力を制限して自分たちの政府での影響力を高めることを要求していたものの、帝国軍の暴力的な鎮圧に憤慨した群衆は紫禁城を急襲するという反撃に打って出た。[Root.Monarch.GetTitle][Root.Monarch.GetName]の贅沢な生活ぶりが露呈したことで、[Root.Monarch.GetHerHim]に情けをかける者もほとんどいない。逃走できる望みが潰えたと思った[Root.Monarch.GetName]は、公開処刑という恥辱にまみえるよりは[Root.Monarch.GetHerHis]自身で自らの命を絶つことを選んだ。\n\n[Root.Capital.GetCapitalName]の新たな統治者は中国を共和国であると宣言し、貴族の土地を農民に再分配し法の下での完全な平等を成し遂げることで国家の再編を行うことを約束した。未来は栄光に満ち、中国の全人民は自由であると宣言する！"
- revolution.40.A:0 "Long Live the Great and Glorious Chinese Republic!"
+ revolution.40.A:0 "偉大なる栄光の共和中国万歳！"
  revolution.41.name:0 "[Root.GetAdjective]革命"
  revolution.41.desc:0 "革命がやってきた！数週間にわたる抗議に引き続き、未曽有の群衆が[Root.Capital.GetCapitalName]に集まりインドの民衆への大幅な自由を要求している。[Root.Monarch.GetTitle]は[Root.Monarch.GetHerHis]の部隊に対し民衆へ発砲することを命じたものの、抗議者たちが暴力や侮辱による挑発を禁じていたために部隊は鎮圧を嫌がった。[Root.Monarch.GetName]は死に物狂いになって全ての反対者に過酷な処置を行うよう命令を出し続けるが、それに直面した陸軍は[Root.Monarch.GetHerHim]をその[Root.Monarch.GetHerHis]の地位から引き摺り下ろすことを決断した。そして新たなる共和国が宣言され、[Root.Monarch.GetSheHeCap]は直ちに追放された。\n\n[Root.GetName]の新たな統治者は、貴族の土地を農民に再分配し法の下での完全な平等を成し遂げ、過去の体制での最悪だった不正を取り除くことで国家の再編を行い、全インドを輝かしく自由な未来へと導くこと約束した。"
  revolution.41.desc2:0 "革命がやってきた！数週間にわたる抗議に引き続き、未曽有の群衆が[Root.Capital.GetCapitalName]に集まり民衆への大幅な自由を要求している。[Root.Monarch.GetTitle]は[Root.Monarch.GetHerHis]の部隊に対し民衆へ発砲することを命じたものの、抗議者たちが暴力や侮辱による挑発を禁じていたために部隊は鎮圧を嫌がった。[Root.Monarch.GetName]は死に物狂いになって全ての反対者に過酷な処置を行うよう命令を出し続けるが、それに直面した陸軍は[Root.Monarch.GetHerHim]をその[Root.Monarch.GetHerHis]の地位から引き摺り下ろすことを決断した。そして大グーラカーン共和国が宣言され、[Root.Monarch.GetSheHeCap]は直ちに追放された。\n\n共和国の新たな統治者は、貴族の土地を農民に再分配し法の下での完全な平等を成し遂げ、過去の体制での最悪だった不正を取り除くことで国家の再編を行い、共和国のすべての民衆を輝かしく自由な未来へと導くこと約束した。"
