--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -1156,7 +1156,7 @@
  flavor_rus.EVTOPTA3416:0 "農民を農奴化する。"
  flavor_rus.EVTOPTB3416:0 "彼らを農奴にしてはならない。"
  flavor_rus.EVTNAME3417:0 "会議法典による完全な農奴制の実施"
- flavor_rus.EVTDESC3417:0 "皇帝アレクセイは家庭教師のボリス･モロゾフからうわべだけの教育を受け、16歳で王位に就いた。アレクセイの義理の兄でもあったモロゾフは当初国政を担当したが、1648年にモスクワでの人々の蜂起によってアレクセイはモロゾフを追放した。アレクセイは反乱軍の要求に屈し、1649年、合法的に定義された農奴制の新しい法律（会議法典）を制定する身分制議会（全国会議）を招集した。"
+ flavor_rus.EVTDESC3417:0 "皇帝アレクセイは家庭教師のボリス・モロゾフからうわべだけの教育を受け、16歳で王位に就いた。アレクセイの義理の兄でもあったモロゾフは当初国政を担当したが、1648年にモスクワでの人々の蜂起によってアレクセイはモロゾフを追放した。アレクセイは反乱軍の要求に屈し、1649年、合法的に定義された農奴制の新しい法律（会議法典）を制定する身分制議会（全国会議）を招集した。"
  flavor_rus.EVTOPTA3417:0 "施行する。"
  flavor_rus.EVTOPTB3417:0 "経済の悪化と市民の反乱を受け入れる。"
  flavor_rus.EVTNAME3418:0 "ニコンの改革とラスコーリニキ"
@@ -1328,7 +1328,7 @@
  flavor_spa.EVTDESC1:0 "探検家のクリストファー・コロンブスは、オリエントへの西方航路の発見を試みるための探検に資金を提供するよう、ポルトガル王である[From.Monarch.GetName]を二度にわたって説得した。二度目に拒否された後、コロンブスは彼の努力を[Root.GetAdjective]王家に向けた。コロンブスは、イタリアの投資家の支援を受けて、[Root.Monarch.GetName]の王を説得し、この探検への同意を得たいと考えている。"
  flavor_spa.EVTOPTA1:0 "彼の提案を拒否する。"
  flavor_spa.EVTOPTB1:0 "コロンブスを雇う。"
- flavor_spa.EVTNAME3716:0 "イベリア･ウエディング"
+ flavor_spa.EVTNAME3716:0 "イベリア・ウエディング"
  flavor_spa.EVTDESC3716:0 "1469年10月、バリャドリッドでアラゴン王フェルディナンド2世は、カスティーリャ王女イザベラと結婚した。これは恋愛ではなく政略結婚であった。アラゴン王室はカスティーリャへの帰還を夢見ており、イサベラは王位継承を勝ち取る助けが必要だった。結婚は暗く苦しい生活で始まった。その生活の中で、フェルディナンドは貴族の寡頭政治に対し彼の権威を強要するためにカスティーリャとアラゴンの前線で戦って、危険度に応じて彼の支持基盤を一つの王国から他方の王国に移した。連合の政治的性質にもかかわらず、彼はイサベラを誠実に愛していた。多くの人々がフェルディナンドを王国の救い主、統一をもたらす者とみなした。他の人々は、彼に圧力をかけて彼を軽蔑した。マキャヴェッリは彼をルネサンス期の王子の不快な性質の結果であると考えた。"
  flavor_spa.EVTOPTA3716:0 "彼らと我々の王朝を結びつけよう"
  flavor_spa.EVTOPTB3716:0 "いいや、代わりに地元の才能ある人物と結婚させよう"
@@ -1639,8 +1639,8 @@
  flavor_fra.EVTOPTC3101:1 "[Root.GetName]に拡大させよう。"
  flavor_fra.EVTNAME3110:0 "フランスの宗教戦争"
  flavor_fra.EVTDESC3110:0 "フランスの宗教戦争は1562年から1598年の間続いた。最初の7つの戦争（1562-1563,1567-1568,1568-1570,1572-1573,1575-1577,1577,1579-1580）には共通の特徴があった。それは、カトリックとプロテスタントの間で分裂した社会、ばらばらになった一貫性のない軍事作戦、そして真の平和というよりも休戦のような平和勅令だった。王位継承の問題は、王国の存在を危機にさらしてしまった。それは、カトリックを敵対勢力へと分裂させるほどだった。1589年のアンリ3世の暗殺以降、スペインの介入により内戦は完全な国際紛争になった。プロテスタントとカトリックの間の暴力と憎しみは、1562-1572年の間フランス全土で増大した。ロレーヌ州出身の力のあるギーズ公爵は、反プロテスタントのカトリック同盟を設立した。彼の考えていたことは王権の弱体化だった。彼は1588年12月23日、アンリ3世の騎士団に暗殺されたが、その後、この同盟は公然と反乱し、王またはその指定された継承者を認めることを拒否し、スペインの軍事援助を求め、スペインの幼児を王位につけようとさえした。アンリ3世は暗殺されたが、彼は死ぬ前に彼のいとこであるナバラ王アンリを継承者と指名していた。アンリ4世は、イングランドとドイツのプロテスタント王子たちからの外国の援助を求めていたが、パリを開城しない限り、自分自身をフランスの王と主張することはできないと気づいた。この首都は断固としてカトリックだった。こうして1593年、アンリはカトリックに改宗した。世間では「パリはミサを捧げるに値する都市である」と語ったとされる。崩壊した王国を結びつけようとして、アンリはナントの勅令を発行し、両者に一定の保証を与えた。\n\n我々はどちらを支持すべきか？"
- flavor_fra.EVTOPTA3110:1 "France is and will always be Catholic."
- flavor_fra.EVTOPTB3110:1 "Catholicism has no place in France."
+ flavor_fra.EVTOPTA3110:1 "フランスはカトリックであり続ける。"
+ flavor_fra.EVTOPTB3110:1 "フランスにカトリックの居場所はない。"
  flavor_fra.EVTOPTC3110:1 "We should seek to avoid bloodshed between religions."
  flavor_fra.EVTNAME9100:0 "恒久的な税制の誕生"
  flavor_fra.EVTDESC9100:0 "シャルル7世はフランスの財政を改革し、特に、直接に土地に課される税であるタイユを通じて、重い課税を確立した。土地の富を抽出することは、フランスの中央集権的な王たちにとって、常に亀裂を生む厳しい綱渡りであった。フランスの土地の広大な富を利用するため、新しく改善された課税方式が何度も必要とされた。歴史を通じ、使用される方法は、国庫の利益を最適化するためにますます合理化された。恒久的な税制の誕生は、この目標に向けた大きな一歩であった。"
@@ -2290,7 +2290,7 @@
  flavor_hab.EVTNAME3208:0 "メッテルニヒ"
  flavor_hab.EVTDESC3208:0 "国政におけるメッテルニヒの経歴は、ラシュタット会議でヴェストファーレン地域の帝国諸伯の代表を務めた1797年に始まる。それから10年も経たないうちに、彼は帝国の駐仏大使になった。彼の経歴が頂点に達したのは、帝国の外務大臣に任命された1809年であった。1813年までメッテルニヒは、フランスの優勢に対して黙認方針をもって臨むことになる。この方針は四国同盟の創設と対仏戦争、そして同年の同盟側の勝利によって終わりを迎える。続く35年間はメッテルニヒ時代と呼ばれる。というのもこの間、彼がヨーロッパにおける、主たる裁定者であったからだ。メッテルニヒ体制は政治上、宗教上の検閲を行うことや諜報活動を行うこと、そして革命的な動きや、民族主義的な動きを抑圧することに依存していた。この体制は1848年革命の一因となった。"
  flavor_hab.EVTNAME3099:0 "ハンガリーにおけるプロテスタントの反乱"
- flavor_hab.EVTDESC3099:0 "宗教的な敵意は、帝国とトルコ人の戦争が1591年に再び発生すると重要な役割を果たした。いわゆる「長い戦争」の最中に、トランシルヴァニアに入った帝国軍と、彼らの指揮官ゲオルク･バスタの、そこと北ハンガリーのプロテスタントに対して行った、非常識で残酷なふるまいによりトランシルヴァニアの将軍、以前はハプスブルクの支持者であったボチカイ・イシュトヴァーンが反乱を起こした。彼の野性的なハイドゥク軍隊はバスタを追い出し、1606年6月にボチカイはルドルフとの間で、権限を拡大したトランシルヴァニアの君主を残し、また王領ハンガリーのプロテスタントの権利を保証した、ウィーンの和平を締結した。"
+ flavor_hab.EVTDESC3099:0 "宗教的な敵意は、帝国とトルコ人の戦争が1591年に再び発生すると重要な役割を果たした。いわゆる「長い戦争」の最中に、トランシルヴァニアに入った帝国軍と、彼らの指揮官ゲオルク・バスタの、そこと北ハンガリーのプロテスタントに対して行った、非常識で残酷なふるまいによりトランシルヴァニアの将軍、以前はハプスブルクの支持者であったボチカイ・イシュトヴァーンが反乱を起こした。彼の野性的なハイドゥク軍隊はバスタを追い出し、1606年6月にボチカイはルドルフとの間で、権限を拡大したトランシルヴァニアの君主を残し、また王領ハンガリーのプロテスタントの権利を保証した、ウィーンの和平を締結した。"
  flavor_hab.EVTOPTA3099:0 "異端者を粉砕する。"
  flavor_hab.EVTOPTB3099:0 "譲歩を与える。"
  flavor_hab.EVTNAME3216:0 "ヨーゼフ2世の啓蒙改革"
@@ -2315,7 +2315,7 @@
  reform_of_the_bureaucracy:0 "官僚機構を改革"
  desc_reform_of_the_bureaucracy:0 "国家を強化し集権化するための改革。"
  flavor_hab.EVTNAME3340:0 "1789年の反動改革"
- flavor_hab.EVTDESC3340:0 "ヨーゼフ2世は論争の的になる統治者である。彼の治世は、ルター派、カルヴァン派、正教に対してローマ･カトリックとほぼ同等の地位を与えた、宗教寛容令のような自由主義的改革で始まった。彼はまた、農奴制を廃止し、（一時的に）当局による検閲を緩めた。しかし、ヨーゼフは同時に極端な中央集権主義者でもあった。1784年、彼はハンガリー政府に対し、公用語であるラテン語は現代的な政府には効果的でなく、ドイツ語に変更することを通知した。彼のおそれに加えて、彼が望まない法律を守ることを誓わなければならないとの理由で、ハンガリーの戴冠式に提出することを拒否し、王国の神聖な王冠をウィーンに移した。1787年3月、ヨーゼフはオーストリア領であったネーデルラントの体制を一掃し、以後は絶対主義に則って統治することを宣言した。ネーデルラントでは抵抗運動が煮え立ち、とうとう1789年、公然たる反乱に発展した。当時、ハンガリーやガリシアでも反乱の噂があり、君主制の多くの地域で革命が暴発するかのように思われた。"
+ flavor_hab.EVTDESC3340:0 "ヨーゼフ2世は論争の的になる統治者である。彼の治世は、ルター派、カルヴァン派、正教に対してローマ・カトリックとほぼ同等の地位を与えた、宗教寛容令のような自由主義的改革で始まった。彼はまた、農奴制を廃止し、（一時的に）当局による検閲を緩めた。しかし、ヨーゼフは同時に極端な中央集権主義者でもあった。1784年、彼はハンガリー政府に対し、公用語であるラテン語は現代的な政府には効果的でなく、ドイツ語に変更することを通知した。彼のおそれに加えて、彼が望まない法律を守ることを誓わなければならないとの理由で、ハンガリーの戴冠式に提出することを拒否し、王国の神聖な王冠をウィーンに移した。1787年3月、ヨーゼフはオーストリア領であったネーデルラントの体制を一掃し、以後は絶対主義に則って統治することを宣言した。ネーデルラントでは抵抗運動が煮え立ち、とうとう1789年、公然たる反乱に発展した。当時、ハンガリーやガリシアでも反乱の噂があり、君主制の多くの地域で革命が暴発するかのように思われた。"
  flavor_hab.EVTOPTA3340:0 "革命的な傾向に対抗する！"
  flavor_hab.EVTOPTB3340:0 "彼らをなだめる。"
  flavor_hab.EVTNAME1:0 "大特許状"
@@ -2377,7 +2377,7 @@
  flavor_brapru.EVTOPTB3532:0 "フリードリヒのエリート改革を行う。"
  flavor_brapru.EVTOPTC3532:0 "バランスの取れた改革を行う。"
  flavor_brapru.EVTNAME1:0 "ベルリン市民の憤り"
- flavor_brapru.EVTDESC1:0 "フリードリヒ2世のシュプレー島に宮殿を建設しようとする願望と決意は、ベルリン市民による憤慨に遭遇し、1448年には選帝侯の拠点のための市の土地の譲渡に対する怒りにより、公然とした反乱は最高潮に達した。ベルリンの市民は王宮の発掘現場に殺到したが、フリードリヒ2世が勝利し、最終的に宮殿が建設され、市の権利は決定的に縮小された。"
+ flavor_brapru.EVTDESC1:0 "フリードリヒ2世のシュプレー島に宮殿を建設しようとする願望と決意は、ベルリン市民による憤慨に遭遇し、1448年には選帝侯の拠点のための市所有地譲渡に対する怒りが、公然とした反乱へと発展した。ベルリン市民は王宮の開削現場に殺到したが、フリードリヒ2世が勝利し、最終的に宮殿が建設され、市の権利は決定的に縮小された。"
  flavor_brapru.EVTOPTA1:0 "民衆を無視する。"
  flavor_brapru.EVTOPTB1:0 "人々の声を聞く。"
  flavor_brapru.EVTNAME2:0 "免罪符の販売"
@@ -2451,10 +2451,10 @@
  flavor_brapru.27.a:0 "よし！神の名の下に始めよう！"
  flavor_brapru.27.b:0 "立法手続きやその他の形式的行為をしている時間はない…"
  flavor_brapru.28.t:0 "ポツダム勅令"
- flavor_brapru.28.d:0 "1世紀以上にわたり、ヨーロッパは改革と対抗改革の影響を見てきた。宗教的な国境が固定化し始めるにつれて、カトリック支配者の下の多くのプロテスタント、あるいは改革派の国民たちは逃亡を続けているように見える。寛容の勅令の取消しで数十万人が新しい家を探している。\nブランデンブルクは人口密集地域ではない。これら男女に避難所を提供し、新しい家を与え、安定化するまで税を免除することで、間違いなく多くの人々を収容することができる。"
- flavor_brapru.28.a:0 "彼らがブランデンブルクに定住できることを知らせよう！"
- flavor_brapru.28.a.tt:0 "ヨーロッパのすべての §Yカトリック§! の支配者との関係が§R30§!低下します。\nこの効果は今後30年間で消失します。"
- flavor_brapru.28.b:0 "我々はそれを受け入れる余裕はない。"
+ flavor_brapru.28.d:0 "1世紀以上にわたり、ヨーロッパは改革と対抗改革の影響を見てきた。宗教的な国境が固定化し始めるにつれて、カトリック支配者の臣民であるプロテスタント、改革派の多くは逃げ惑っている。寛容な勅令の取消しにより、数十万人が新しい故郷を探しているのだ。\nブランデンブルクは人口密集地域ではない。これら男女に避難所を提供し、新しい家を与え、安定化するまで税を免除したことで、間違いなく多くの人々を収容することができたのである。"
+ flavor_brapru.28.a:0 "ブランデンブルクに定住できることを知らせよう！"
+ flavor_brapru.28.a.tt:0 "ヨーロッパのすべての§Yカトリック§!の支配者との関係が§R30§!低下します。\nこの効果は今後30年間で消失します。"
+ flavor_brapru.28.b:0 "受け入れる余裕はない。"
  flavor_brapru.29.t:0 "戦争論"
  flavor_brapru.29.d:0 "「戦争のすべてはとても簡単なものである。しかし、最も簡単なことこそが難しいのだ」[Root.Mil_Advisor.GetName]は、評議会で厳粛に語る。「深遠だ！」と[Root.Monarch.GetTitle]が声を上げると、我々の軍事顧問は赤面し、この数年の間に我々の軍隊の階級を経て上昇してきた哲学的な若者からこの句を盗んだことを告白した。経験豊富な司令官であることに加えて、この人物は、社会の一層身分の高い社交界においてさえも、自身の名を高めているようだ。彼は戦争の道徳的側面について考察し、議論する時間を多く費やしているとも言われている。いく人かは、十分な時間を与えられれば、彼はその本を出版する可能性が高いと言っている…おそらく、彼は我々の役に立つだろうか？"
  flavor_brapru.29.a:0 "彼は明らかに偉大な思想を持つ人物だ －彼を顧問にしよう。"
@@ -2770,7 +2770,7 @@
  flavor_pol.EVTDESC11:1 "Following the establishment of a konfederacja demanding the dethronement of the [Root.Monarch.GetTitle], rebel nobles have risen up in open rebellion against the Crown. A royal army under the command of Hetman Jan Karol Chodkiewicz has been sent to pacify the rebels, though there is still a chance to negotiate and concede to some of their demands."
  flavor_pol.EVTOPTA11:0 "反乱軍の指導者と協議する。"
  flavor_pol.EVTOPTB11:0 "反乱軍を抑えろ"
- flavor_pol.EVTNAME12:1 "セイムをなだめる"
+ flavor_pol.EVTNAME12:1 "セイムの和解"
  flavor_pol.EVTDESC12:1 "The rebellion of the Szlachta is over! The refusal of the [Root.Monarch.GetName] to concede to noble demands as well as [Root.Monarch.GetHerHis] victories against rebel uprisings have resulted in a clear victory for the Crown. The Szlachta have surrendered in exchange for lenient punishments for their crimes and the [Root.Monarch.GetName] has truly seized the reins of government, establishing for the first time a hereditary and absolute monarchy in [Root.GetName]."
  flavor_pol.EVTOPTA12:1 "貴族たちは正式に降伏した。"
  flavor_pol.20.t:0 "ポーランドの選挙君主制"
@@ -2898,8 +2898,8 @@
  flavor_vij.EVTOPTB9:0 "他のものに注力する。"
  flavor_vij.EVTNAME10:0 "ビャサターサ"
  flavor_vij.EVTDESC10:0 "学者ビャサターサは、ドヴァイタ・ヴェーダーンタ（ヴェーダの二元論的結論）学派の3つの霊的な光またはムニトリアムの一つとして評価されている。彼の反対者さえも、彼が彼に反対するすべての思想学派についての明確な理解と解説を持ち合わせていることを賞賛した。ビャサターサは論理と哲学における議論と対話の熟練者で、クリシュナ・デーヴァ・ラーヤ治世下でヴィジャヤナガル王国に大きな影響を与えた。王はビャサターサに最大の関心と敬意を払った。クリシュナ・デーヴァ・ラーヤはこの学者を彼のクラデヴァータ（一族の守り神）や教師以上のものとみなした。ビャサターサの有名な作品には、ニャヤムリタム（論理の蜜）、タルカタンダバ（論理の踊り）、タパパヤ・チャンドリカ（解説の月光）、マヤバダ・カンダナ・マンダラマンジャリ、アップダディ・カンダナ・マンダラマンジャリ、プラパンチャ・ミディアヴィニマーナ・カンダナ・マンダラマンジャリ、タッタバヴィヴェカ・マンダラマンジャリ、ヴィドジジーバナそしてサッタークヴァスタが含まれている。"
- flavor_ayu.EVTNAME1:0 "ボーロマ･トライローカナートの改革"
- flavor_ayu.EVTDESC1:0 "国王ボーロマ･トライローカナート王は国の政府を効率化しようとして、様々な改革を提案している。それらの多くは優れた効果を挙げる一方で、高くつくだろうし、社会不安も引き起こすかもしれない。我々はどうするべきだろうか？"
+ flavor_ayu.EVTNAME1:0 "ボーロマ・トライローカナートの改革"
+ flavor_ayu.EVTDESC1:0 "国王ボーロマ・トライローカナート王は国の政府を効率化しようとして、様々な改革を提案している。それらの多くは優れた効果を挙げる一方で、高くつくだろうし、社会不安も引き起こすかもしれない。我々はどうするべきだろうか？"
  flavor_ayu.EVTOPTA1:0 "改革とともに進もう。"
  flavor_ayu.EVTOPTB1:0 "改革の考えを無視する。"
  flavor_ayu.EVTNAME2:0 "チャクラパット王の軍改革"
@@ -2914,7 +2914,7 @@
  flavor_ayu.EVTDESC4:0 "エーカタット王はひどい愚か者で、この国の王としては最悪の人物であった。彼は統治の義務を放り出し、毎日宴を繰り広げては酒と道楽におぼれた。その頃王国は分裂状態に陥り、隣国は獲物の周りを飛び回るハゲタカのように我が国を取り巻いた。不幸なことに、王はもっと統治に関わるよう勧める諫言を全て拒否し、そのため国家はさらなる無秩序状態へと陥っていった。"
  flavor_ayu.EVTOPTA4:0 "なぜ我々はこれほど無能な愚者を戴いているのだろう？"
  flavor_ayu.EVTNAME5:0 "近代タイ国家の創設"
- flavor_ayu.EVTDESC5:0 "エーカタット王在位時の無秩序は過去のものとなり、新国王プヤー･タークシンが国家を新たな軌道に乗せた。彼は首都をバンコク近郊のトンブリーに移し、徹底的な行政改革に取り組んで国を再建しようと望んでいる。我々は彼の望みに従うべきだろうか？"
+ flavor_ayu.EVTDESC5:0 "エーカタット王在位時の無秩序は過去のものとなり、新国王プヤー・タークシンが国家を新たな軌道に乗せた。彼は首都をバンコク近郊のトンブリーに移し、徹底的な行政改革に取り組んで国を再建しようと望んでいる。我々は彼の望みに従うべきだろうか？"
  flavor_ayu.EVTOPTA5:0 "これは新しい時代の始まりだ！"
  flavor_ayu.EVTNAME6:0 "ワット・チャイワッタナーラーム"
  flavor_ayu.EVTDESC6:0 "国王プラーサートトーンは、1630年にワット・チャイワッタナーラームの最初の寺院を母親の記念碑として建設した。寺の名前は「長い統治と栄光の時代の神殿」を意味し、それはクメール様式で設計されている。宗教的な儀式や王子と王女の火葬がそこで行われた。120の黒と金で塗られた仏像が座り、壁を飾っている。中央の壇を取り囲んで8つの仏塔形式の礼拝堂があり、外壁には仏陀の人生の情景を描き、時計回りに「読む」必要がある12の彫刻で飾られている。四角い仏塔のそれぞれには2つの座っている仏像があり、4つの中央の仏塔のそれぞれには大きな黒と金で漆塗りされた仏像が座っている。これらの彫像の天井は、黒い漆に黄金の星がある木でできている。"
@@ -4513,7 +4513,7 @@
  hre_event.3.c:0 "OK"
  hre_event.4.t:0 "イタリア王国と帝国"
  hre_event.4.d:1 "For years now Imperial Authority over the Kingdom of Italy has been waning. Successive Emperors have failed to impose their will on the Italian states, as they have begun to act with total disregard for Imperial laws and customs.\nUnless the wayward nations of northern Italy are firmly reined in soon, Italy may slip out of Imperial control forever."
- hre_event.4.a:1 "A grave matter."
+ hre_event.4.a:1 "重大な問題だ。"
  hre_event.4.a.tt:0 "§Yイタリア王国§!のすべての地域が1490年までに帝国の一部であり、1550年までそこにとどまらない限り、この州は帝国を離れる可能性が高い州です。"
  hre_event.4.b:0 "興味深い。"
  hre_event.4.b.tt:0 "以下の地域が1490年までに完全に帝国の一部であり、1550年までとどまらない限り、全てのイタリア国家は帝国を離れる選択肢が与えられます：\n§Yピエモンテ§!\n§Yロンバルディア§!\n§Yエミリア＝ロマーニャ§!\n§Yリグーリア§!\n§Yトスカーナ§!\n§Y中央イタリア§!\n§Yヴェネツィア§!（ヴェネツィアを除く）"
@@ -4772,7 +4772,7 @@
  flavor_wal.EVTDESC2D:1 "[Root.Monarch.GetName]は戦場を見渡すことを一旦止め、平静ながらも落ち着かない様子で、燃える都市[TUR.Capital.GetName]をほんの一瞬見つめました。\n[Root.Monarch.GetHerHisCap]の元に集まった従者達は、来るべき判断のため、彼らの槍と腹の準備を整えています。オスマン王室への残忍な串刺し刑が始まります。"
  flavor_wal.EVTDESC2E:1 "[Root.Monarch.GetName]は戦場を見渡すことを一旦止め、平静ながらも落ち着かない様子で、燃える都市[TUR.Capital.GetName]をほんの一瞬見つめました。\n[Root.Monarch.GetHerHisCap]の元に集まった従者達は、来るべき判断のため、彼らの槍と腹の準備を整えています。オスマン王室への残忍な串刺し刑が始まります。\n[TUR.Heir.GetTitle][TUR.Heir.GetName]は恐ろしい展示物を見ることを強いられたため、顔をゆがめました。次は自分の番だという現実が分かり始めたため、その目は恐怖で満たされています。"
  flavor_wal.EVTDESC2G:1 "集まった従者達は、来るべき判断のため、彼らの槍と腹の準備を整えています。オスマン王室への残忍な串刺し刑が始まります。兵士は、殴られボロボロである[TUR.Monarch.GetTitle][TUR.Monarch.GetName]の体を、地面でうなだれている姿勢から持ち上げ、体を支え、直立させました。かつて威厳のあった[TUR.Monarch.GetTitle]は、杭が心臓に突き刺さり、背中から出てくる際に、末期のゾッとするような金切り声を上げました。"
- dnz_decision_available_tooltip:1 "§Y「プロシア連合の縮小」§!の決断が使用可能になりました。"
+ dnz_decision_available_tooltip:1 "§Y「プロシア連合の縮小」§!の決断が使用可能になりました。\n階級特権§Y「プロシア連合への譲歩」§!が使用可能になりました。"
  flavor_klm.d.1:1 "カルムイクの部族民が野営地に向かって馬を走らせるにつれ、蹄の音が雷鳴の如く平野を渡って鳴り響きます。ハーンは小さくとも丈夫な馬から優雅に降り、我々の使節を迎えるために武器を武器を差し出します。彼は、家畜を放牧し、慣習に従って生活するための新しい土地を探し求め、全部族をはるか東方から導いてきたのだと説明しています。\nハーンは、クマ川の草原に彼の部族を定着させるのに最適な場所を見つけたと信じています。クマ川の支配者として、彼は自身の国民がこの土地を独立して支配できるようにするために、戦士を[Root.GetName]に出征しています。彼が話すにつれ、彼の表情は固くなり、ハーンは厳かに前へと進み出ます。彼は会談から離れる前に警告を加えます。彼は今や部族を引き返させることはできません。彼の言葉を受け入れなければ、我々は彼と戦闘で向き合わなければなりません。"
  granada_civil_war.1.t:0 "僭称者が蜂起"
  granada_civil_war.1.desc:0 "ユースフはナスル朝ムハンマド9世の甥である。かつては誰しもに愛されたが、兵を起こし、自らアミールとなろうとしている。\n\n我らが家族間でこのような対立に至ったことは理解の範疇を超えているが、このようなふてぶてしい行動は蛮行と称されるに相応しい。ユースフは吊るされなければならない。"
