--- a/source/localisation/manchu_l_english.yml
+++ b/source/localisation/manchu_l_english.yml
@@ -256,7 +256,7 @@
  flavor_oir.5.t:0 "北京の占領"
  flavor_oir.5.d:0 "北京が陥落しました！首都が我が支配下にあり、皇帝を拘束している以上、明は我々の要求を拒むことはできません。明政府の残党に即時降伏を求める書状を送りました。"
  flavor_oir.5.a:0 "完全降伏のみ受け入れよう。"
- ming_surrender_tt:0 "§Y華北地方において明が領有、管理している州全てを[Root.GetName]が占領している§!"
+ ming_surrender_tt:0 "§Y華北地方において明が所有、支配している全ての州が[Root.GetName]に占領されます§!"
  flavor_oir.6.t:0 "オイラトによる北京占領"
  flavor_oir.6.d:0 "オイラトの蛮族によって北京が占領された。我々にできることは降伏して彼らの要求を受け入れる以外にはほとんどない。"
  flavor_oir.6.a:0 "受け入れざるを得ない。"
@@ -267,7 +267,7 @@
  desc_mng_militry_incompetence:0 "軍事的才能に欠けていたにもかかわらず、皇帝は愚かにも自ら軍を率いることを決めた。"
  oir_captured_mng_emperor:0 "皇帝の捕縛"
  desc_oir_captured_mng_emperor:0 "我が支配者は明の皇帝を捕らえた。彼が生きている限り、我が軍隊に偉業を思い起こさせるだろう。"
- warriors_do_not_read_books:0 "戦士たちは書物を読まない"
+ warriors_do_not_read_books:0 "戦士たる者、書を読まず"
  desc_warriors_do_not_read_books:0 "わが国は文化や行政の進歩を犠牲にして軍事に注力している。"
  IS_NOT_GETTING_EXPELLED_MINORITY:0 "マイノリティの追放を実行していない"
  IS_GETTING_EXPELLED_MINORITY:0 "マイノリティの追放を実行している"
