--- a/source/localisation/mare_nostrum_l_english.yml
+++ b/source/localisation/mare_nostrum_l_english.yml
@@ -78,15 +78,15 @@
  STEALMAPTITLE:0 "地図を盗む"
  SPYCOST:0 "我が国の$ADJ|Y$諜報網の大きさを$COST$減らします。"
  STEALMAPDESC:0 "地方の地図を標的から盗む"
- STEALMAP_OFFDESC:0 "$RECIPIENT_ADJ$の地図を盗むことで、$ACTOR$は$REGION$の地域の知識を得て、$NUM_PROVS|Y$州を発見し、$COST$の諜報網を消費します。"
+ STEALMAP_OFFDESC:0 "$RECIPIENT_ADJ$の地図を盗むことで、$ACTOR$は$COST$の諜報網コストで、$REGION$地域の知識を得て、$NUM_PROVS|Y$州を発見します。"
  SHAREMAPTITLE:0 "地図の共有の要求"
- SHAREMAP_REQDESC:0 "$ACTOR$は我々の$REGION$への知識を共有することを望んでいます。受け入れることで、彼らは$NUM_PROVS|Y$州を発見し、我々に$PRESTIGE$の威信を与えるでしょう。"
- SHAREMAP_OFFDESC:0 "我々は彼らと$REGION$の知識を共有するよう要請する意思があり、もし彼らが受け入れれば、我々は$NUM_PROVS|Y$州を発見するでしょう。さらに、我々は$LOSE$の威信を失いますが、彼らは$GAIN$の威信を得ます。"
- SHAREMAP_NO_UNITS:0 "私たちはこの地域近隣にユニットを持っていません。"
- SHAREMAP_NO_UNDISCOVERED:0 "この地域の我らがまだ知らない州を彼らも知りません。"
- SHAREMAP_NO_REGIONS:0 "彼らは我らが発見しておらず我らが知っている地域に隣接している州を知りません。"
+ SHAREMAP_REQDESC:0 "$ACTOR$は$REGION$の知識の共有を望んでいます。受け入れることで、彼らは$NUM_PROVS|Y$州を発見し、我々に$PRESTIGE$の威信を与えるでしょう。"
+ SHAREMAP_OFFDESC:0 "$REGION$の知識を共有するよう要請し、もし彼らが受け入れれば、我々は$NUM_PROVS|Y$州を発見するでしょう。さらに、我々は威信を$LOSE$失いますが、彼らは威信を$GAIN$得ます。"
+ SHAREMAP_NO_UNITS:0 "我々はこの地域近隣にユニットを持っていません。"
+ SHAREMAP_NO_UNDISCOVERED:0 "この地域の我々がまだ知らない州を彼らも知っていません。"
+ SHAREMAP_NO_REGIONS:0 "我々の既知地域に隣接している我々が発見していない州を彼らも知っていません。"
  SHAREMAP_RIVAL:0 "ライバルに地図の共有を依頼することはできません。"
- SHAREMAP_ENEMY:0 "彼らは我々をライバルとみなしており、我々と地図の共有をすることはないでしょう。"
+ SHAREMAP_ENEMY:0 "彼らは我々をライバルとみなしており、地図の共有をすることはないでしょう。"
  UNCONDITIONALSURRENDERTITLE:0 "無条件降伏"
  UNCONDITIONALSURRENDERDESC:1 "彼らに§Y無条件降伏§!することで、彼らに我々に対する和平を提案するため$MONTHS$ヶ月を与えます。"
  UNCONDITIONALSURRENDERREQDESC:1 "無条件降伏してもよろしいですか？$COUNTRY$は自動的に受け入れる和平提案を我々に送るための$MONTHS|Y$ヶ月を持つでしょう。もし彼らがそれを送らなければ、彼らの国で平和を求め、ますます厳しい声が上がるでしょう。\n\n我々の故郷にいる我々の軍隊は追放され、我々がこれを行うことで保護されます。\n\n現在、我々が所有し支配しているすべての州の支配権は、敵に移されます。"
