--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -1574,7 +1574,7 @@
  garba:0 "踊れ！"
  garba_desc:0 "女性が踊りを通してヒンドゥー教の女神アンバジを崇拝することに起源を持ち、人々はガルバと呼ばれる新しい優雅な踊りを洗練してきた。踊りの基礎は、歌いながら、リズムに沿って円の形で手を叩くというものだ。今日、私たちの男性と女性が、この踊りを利用して、大きな情熱とともに地域社会として一緒に訪れ、絶妙に刺繍された服を着て、あらゆる機会を祝福するため集まった。若者と老人、農民と君主、イスラム教徒とヒンドゥー教徒は、共に成長し続けている。"
  jain_routes:0 "ジャイナ教との結びつき"
- jain_routes_desc:0 "ジャイナ教は古代の生活様式であり、マハーヴィーラ（紀元前599年～紀元前527年）によって現在の形となった。千年にわたり、グジャラートは、多くの聖地と寺院、宗教を後援し、ヒンドゥー教徒と共通の社会を形成している王朝時代のジャイナ教徒の社会と信仰の拠点であった。マフムード・ ガズナ（1001年）とムハンマド・ゴーリー（1175年）による東方からのイスラム教徒の侵略は、ジャイナ教の社会を圧迫し、寺院が破壊されたり、モスクに変えられただけでなく、ジャイナ教の書物も焼かれた..しかし、グジャラートのジャイナ教徒は、信仰と商取引の両方の中枢として機能することで、世界中のジャイナ教社会との関係を利用し、生き残って適応し、繁栄してきた。"
+ jain_routes_desc:0 "ジャイナ教は古代の生活様式であり、マハーヴィーラ（紀元前599年～紀元前527年）によって現在の形となった。千年にわたり、グジャラートは、多くの聖地と寺院、宗教を後援し、ヒンドゥー教徒と共通の社会を形成している王朝時代のジャイナ教徒の社会と信仰の拠点であった。マフムード・ ガズナ（1001年）とモハンマド・ゴーリー（1175年）による東方からのイスラム教徒の侵略は、ジャイナ教の社会を圧迫し、寺院が破壊されたり、モスクに変えられただけでなく、ジャイナ教の書物も焼かれた..しかし、グジャラートのジャイナ教徒は、信仰と商取引の両方の中枢として機能することで、世界中のジャイナ教社会との関係を利用し、生き残って適応し、繁栄してきた。"
  gujarati_lipi:0 "グジャラート文字"
  gujarati_lipi_desc:0 "16世紀後半、新たな文字と書体である、グジャラート文字が開発された。それは商業的な利益によって開発され、商業との関連性のためにsaraphi（銀行家）、vaniasai（商人）、またはmahajani（交易商）の文字としても知られるようになった。それは、グジャラート、カッチ、シンドを通じて急速に普及し、サンスクリット語を学び、ゾロアスター社会でアヴェスターを書くために採択され、それらを代表する言語となった。それは、多くの異なる社会のための共通の書体系を提供し、それらを結びつけるだけでなく、統一と共通の帰属意識を促進した。"
  merchant_diaspora:0 "流浪のグジャラート商人"
@@ -1784,7 +1784,7 @@
  land_of_peaks:0 "高峰の地"
  land_of_peaks_desc:0 "我々の人々は、我々を取り巻く偉大な高峰を見失うことなく生き、そして死ぬ。我々は、手の甲のような丘や山々を知っている。神々さえ高地に定住している。我々は常に我々が学んだ重要な教訓を心に留めるべきだ…地の利を生かすため砦を建設しよう。"
  valleys_united:0 "峡谷の結束"
- valleys_united_desc:0 "ネパールは、峡谷を統一し、それらの間に秩序を課し、普遍的硬貨を発行したジャヤスティティ･マッラ（統治1382～1395年）によって、我々の時代のすぐ前に統一された。軍事的な主君であるだけでなく、ジャヤスティティ･マッラは、古代のヒンドゥー教の教典の規範に基づいて、ネパールで最初の包括的な成文法を起草した。さまざまな公領と山岳民族が、今、我々の呼びかけに耳を傾けるだろう。"
+ valleys_united_desc:0 "ネパールは、峡谷を統一し、それらの間に秩序を課し、普遍的硬貨を発行したジャヤスティティ・マッラ（統治1382～1395年）によって、我々の時代のすぐ前に統一された。軍事的な主君であるだけでなく、ジャヤスティティ・マッラは、古代のヒンドゥー教の教典の規範に基づいて、ネパールで最初の包括的な成文法を起草した。さまざまな公領と山岳民族が、今、我々の呼びかけに耳を傾けるだろう。"
  rajput_refugees:0 "ラージプートの難民"
  rajput_refugees_desc:0 "14世紀のイスラム侵攻は平野を南に横断し、広範な打撃をもたらした。多くの高貴なラージプートの一族は退けられ、土地所有者としての地位を回復しようとするために、我々の山へ逃げ込んだ。彼らに土地を与え、彼らの戦いの経験と戦士の伝統を利用しよう。"
  royal_kumari:0 "ロイヤル・クマリ"
@@ -3560,7 +3560,7 @@
  pgr_rumah_gadang:0 "ルマ・ガダン"
  pgr_rumah_gadang_desc:0 "我々の伝統的建築とルマ・ガダンの家の機能は、ミナンカバウの文化と価値を反映している。ルマ・ガダンは、住居や家族の集まる場所としてのホール、礼典用の場所として役目を果たす。豊かな装飾品と素晴らしき外観は、パラユングの象徴であり、建築能力のなせる業である"
  pgr_matrilinear_culture:0 "母系文化"
- pgr_matrilinear_culture_desc:0 "アダット･プルパティは、ミナンカバウの人々の慣習と生活ルールを結合したものである。財産と土地は、母から娘に引き継がれ、宗教と政治は男の仕事である。伝統は、アダット・プルパティの名誉と尊厳を守る。しかしながら、貧しいアダット・プルパティの女性がいるかもしれないが彼女は保護される。これは我々の社会が些細な紛争により分裂をしないことを保証する。"
+ pgr_matrilinear_culture_desc:0 "アダット・プルパティは、ミナンカバウの人々の慣習と生活ルールを結合したものである。財産と土地は、母から娘に引き継がれ、宗教と政治は男の仕事である。伝統は、アダット・プルパティの名誉と尊厳を守る。しかしながら、貧しいアダット・プルパティの女性がいるかもしれないが彼女は保護される。これは我々の社会が些細な紛争により分裂をしないことを保証する。"
  CMI_ideas:0 "苗のアイデア"
  CMI_ideas_start:0 "苗の伝統"
  CMI_ideas_bonus:0 "苗の宿願"
@@ -5781,7 +5781,7 @@
  kid_lords_of_ireland_desc:0 "ゲール人やアングロ・アイリッシュ人の一族との政略結婚や同盟を通じて、キルデアの統治者はアイルランド全土に対し、どのライバルにも匹敵しない影響力を保持した。彼らの力は非常に強力であったので、歴代のイングランド君主は彼らをアイルランド総督に任命した。"
  kid_ear_of_the_king:0 "雄弁"
  kid_ear_of_the_king_desc:0 "再三君主に背いたにもかかわらず、キルデアのフィッツジェラルド家は窮地をうまく言い逃れ、恩赦や昇進を伴い帰国する。"
- kid_silken_finery:0 "絹衣のトマス"
+ kid_silken_finery:0 "絹衣のトーマス"
  kid_silken_finery_desc:0 "トマス・フィッツジェラルドがイングランド王に対する忠誠を捨て去った際、彼は、兜に絹のふさ飾りで飾られている、武装したギャローグラスの従者を随伴させた。トマスが自分がどう行動すべきかに対して心が揺れ動いた際、アイルランドの詩人は彼に詩を朗読し、絹衣の主に彼の父の死に対して復讐するよう求めた。"
  kid_royal_irish_army:0 "アイルランド王立軍"
  kid_royal_irish_army_desc:0 "アイルランド人を鎮圧するためにイングランド王より送られた軍は、連合王国貴族により簡単に別用途に用いることができる。単により良い賃金を支払うことによって、キルデア伯はイングランド兵のかなりの部隊に対して命令を下すことができる。"
