--- a/source/localisation/prov_names_adj_l_english.yml
+++ b/source/localisation/prov_names_adj_l_english.yml
@@ -2210,7 +2210,7 @@
  PROV_ADJ2229:0 "ブスト"
  PROV_ADJ2230:0 "チャハーンスール"
  PROV_ADJ2231:0 "ベラ"
- PROV_ADJ2232:0 "ハーラン"
+ PROV_ADJ2232:0 "カーラン"
  PROV_ADJ2233:0 "チャーバハール"
  PROV_ADJ2234:0 "ラフサンジャーン"
  PROV_ADJ2235:0 "サブゼバール"
@@ -2453,7 +2453,7 @@
  PROV_ADJ2473:0 "スース"
  PROV_ADJ2474:0 "Tajarhian"
  PROV_ADJ2475:0 "ジャド"
- PROV_ADJ2476:0 "クミアイ "
+ PROV_ADJ2476:0 "クミアイ"
  PROV_ADJ2477:0 "ユキ"
  PROV_ADJ2478:0 "タチ"
  PROV_ADJ2479:0 "マイドゥ"
@@ -2724,7 +2724,7 @@
  PROV_ADJ2744:0 "寧辺"
  PROV_ADJ2745:0 "慶州"
  PROV_ADJ2746:0 "ヴィディン"
- PROV_ADJ2747:0 "カラ・ナリン・オラ"
+ PROV_ADJ2747:0 "カーラ・ナリン・ウラン"
  PROV_ADJ2748:0 "建昌"
  PROV_ADJ2749:0 "チフヴィン"
  PROV_ADJ2750:0 "プロヴディフ"
