--- a/source/localisation/rights_of_man_l_english.yml
+++ b/source/localisation/rights_of_man_l_english.yml
@@ -219,7 +219,7 @@
  RULER_CONSORT_MARRIAGE_LESS_THAN:0 "$MONARCH|Y$と$CONSORT|Y$の婚姻期間は$YEARS|Y$年未満です。\n"
  RULER_CONSORT_MARRIAGE_AT_LEAST:0 "$MONARCH|Y$と$CONSORT|Y$の婚姻期間は$YEARS|Y$年以上です。\n"
  PAY_SUBJECT_DEBT_TITLE:1 "借金の完済"
- PAY_SUBJECT_DEBT_NO_LOANS:0 "$COUNTRYNAME$には借金はありません。"
+ PAY_SUBJECT_DEBT_NO_LOANS:0 "$COUNTRYNAME$は借金をしていません。"
  PAY_SUBJECT_DEBT_DESCRIPTION:0 "$COUNTRYNAME|Y$の合計$DEBTAMOUNT|Y$¤の負債を引き受けます。"
  OVERLORD_PAID_DEBTS:0 "我々の$DEBTSUM$¤の負債を清算します！"
  BESTOW_GIFTS_TITLE:0 "贈り物を授ける"
@@ -584,7 +584,7 @@
  harem_events.21.t:0 "[Root.Monarch.GetTitle]のための競争"
  harem_events.21.d:0 "[Root.Monarch.GetName]がまだ彼の配偶者たちの中でお気に入りの名前を挙げていないため、それらすべてがスルタンのそばの正当な地位を獲得するため策略を巡らせている。帝国のハレムは陰謀に満ちており、現在、帝国で想像できる最高の栄誉の一つである、ハセキ・スルタンの地位をよく理解した選択肢が作られている。幸いなことに、[Root.Monarch.GetName]の母親はハレムの政治をしっかりと把握しており、[Root.Monarch.GetName]に、彼女が良い候補者になると感じている配偶者を提示している。"
  harem_events.21.a:0 "素晴らしい！"
- harem_events.21.b:0 "母よ、私のことは私が決める･･･"
+ harem_events.21.b:0 "母よ、私のことは私が決める…"
  harem_events.21.c:0 "選択を保留しておこう。"
  harem_events.22.t:0 "[Root.GetName]と王子"
  harem_events.22.d:1 "As is customary some of our provinces are governed by imperial princes so that they may learn what it is to be rulers one day. It is also understood that these provinces can serve as their base of power when the time comes to see to the succession. That struggle itself often gives ample opportunity to sort out the bad eggs.\nSometimes, however, the process can be even more hasty. It seems one of our Prince-Governor's has managed to actively destroy the resources under his control. If nothing is done soon revenue will be permanently reduced. Unfortunately, however, the Royal Prince, while not our favorite, does have support from some influential groups in [Root.Owner.Capital.GetCapitalName], so if we are to withdraw his assignment there will be some backlash."
@@ -619,7 +619,7 @@
  christianity_cult:0 "キリスト教"
  christianity_cult_desc:0 "我々は、我々の罪を贖って死んだイエス・キリストを地上に遣わされた神の道に従う。"
  islam_cult:0 "イスラム"
- islam_cult_desc:0 "我々は、預言者ムハンマドによって世界を明らかにされた偉大な神の道に従う。"
+ islam_cult_desc:0 "我々は、預言者モハンマドによって世界を明らかにされた偉大な神の道に従う。"
  buddhism_cult:0 "仏教"
  buddhism_cult_desc:0 "我々は、何世紀も前にこの地を歩いた偉大な師、ゴータマ・ブッダの道に従う。彼を通じて我々は、復活の四諦、そしてこの世界の性質について学ぶ。"
  dharmic_cult:0 "サナタナ・ダルマ"
@@ -1677,4 +1677,4 @@
  fetishist_flavor.5.d.d:0 " "
  fetishist_flavor.11.t:0 " "
  fetishist_flavor.21.t:0 " "
- EVENTOPTION_ENABLED_BY_TRIGGER:0 "This option is available to us because:\n$TRIGGER_DESC$"
+ EVENTOPTION_ENABLED_BY_TRIGGER:0 "以下の理由のため、この選択肢を利用可能です：\n$TRIGGER_DESC$"
