--- a/source/localisation/womeninhistory_l_english.yml
+++ b/source/localisation/womeninhistory_l_english.yml
@@ -65,7 +65,7 @@
  women_history_events.16.b:0 "コンキスタドーラにしよう！"
  women_history_events.16.c:0 "なんと興味深い！"
  women_history_events.17.t:0 "フアナ＝イネス・デ・ラ・クルス"
- women_history_events.17.d:0 "「十人目のミューズ」そう呼ばれていたフアナ＝イネス・デ・ラ・クルスは独学の識者であり、バロック様式の詩人でもあり、サン･ヘロニモ修道会の修道女である。彼女は自らの望むように学ぶべく修道女になった。彼女は「自らの勉強する自由を減ずるかもしれないということが決まっていない職業に就くこと」を望んだ。修道院の図書館は彼女の本のコレクションや著作とともに成長した。彼女は「修道女フアナへの手紙」の中で、彼女は教育に対する女性の権利を擁護しており、それは多くの書記官の注目と彼女への非難をもたらしている。"
+ women_history_events.17.d:0 "「十人目のミューズ」そう呼ばれていたフアナ＝イネス・デ・ラ・クルスは独学の識者であり、バロック様式の詩人でもあり、サン・ヘロニモ修道会の修道女である。彼女は自らの望むように学ぶべく修道女になった。彼女は「自らの勉強する自由を減ずるかもしれないということが決まっていない職業に就くこと」を望んだ。修道院の図書館は彼女の本のコレクションや著作とともに成長した。彼女は「修道女フアナへの手紙」の中で、彼女は教育に対する女性の権利を擁護しており、それは多くの書記官の注目と彼女への非難をもたらしている。"
  women_history_events.17.a:0 "聡明そうな女性だ、ぜひ王宮に迎え入れたいものだ。"
  women_history_events.17.b:0 "彼女の著作を国中に配ろう。"
  women_history_events.18.t:0 "ジャンヌ・ダルブレ"
@@ -404,8 +404,8 @@
  women_history_events.98.d:0 "許蘭雪軒の父である許嘩は、男女有別のような儒教的信念を持つ保守的な官吏であった。彼女の才能の芽吹きと好奇心を無視し、彼は彼女の兄の許篈に彼女を文学に紹介させた。彼女はわずか8歳の時、天才的な作品を認識されて、「不滅の乙女」の通り名を与えられ、『広寒殿白玉楼上樑文』を書いた。許篈は、彼女がハヌムの詩に対する生来の才能を示したとき、彼女に儒教の五経のような中国の作品を紹介した。彼の政治的傾向のために追放された許篈は、彼の弟である許筠に彼女のさらなる教育を託した。彼は唐詩の師匠であり、彼と許蘭雪軒に唐詩を教えた李達の下で学んだ才能豊かな詩人であった。唐詩は彼女の作品に影響を与え、彼女の詩の自然主義にそれが示されている。許蘭雪軒が金誠立と結婚すると、彼女の詩は結婚した女性の窮状と苦しみを嘆き始めた。彼女の初期の文学は、唐の伝統に共通する民俗と自然の姿を採り入れたが、今では彼女の詩は感情的な言葉で重み付けされている。"
  women_history_events.98.a:0 "不幸な結婚から彼女を守り、彼女を顧問としよう。"
  women_history_events.98.b:0 "我々は何もしないが、彼女の詩を鑑賞はするだろう。"
- women_history_events.99.t:0 "マリヤム・ウッザマーニー"
- women_history_events.99.d:0 "ヒール・クンワーリー妃は、夫であるアクバル皇帝との間に息子をもうけたことで、マリヤム・ウッザマーニー（時代のマリヤ）の称号を与えられた。皇帝が3人の息子に恵まれることを予言した聖者の名にちなみ、男の子はサリームと名付けられた。彼女は3番目の妃であったが、事実上の皇太子の母として他の妃よりも高遇された。彼女はヒンドゥー教徒であり、彼女との結婚によりアクバルはヒンドゥー教と配下のヒンドゥー諸国をより好意的な目で見るようになった。アクバルは在位中、彼女の出身家から強力な支援を受けた。またラージプート・ヒンドゥー王朝の王女を妃とすることで、信仰している宗教に関わらず全ての臣民のパードシャー（最高君主）であることを自ら現した。国の公式文書であるファルマンの布告は通常、皇帝の専権事項とされ宮廷の女性に許された例はほとんどないが、彼はマリヤム・ウッザマーニーにその特権を与えるほどの信頼を寄せた。彼女はファルマンの布告に際して、ワリ・ニマト・ベガム（神の恩寵）の称号を用いた。彼女はスパイス、絹、その他様々な物品の貿易によって財産を蓄える傍ら、庭園、井戸、モスクの造営にも取り組んでいる。マリヤム・ウッザマーニーの私的な財産に比べれば、ヨーロッパ諸国の王が保持する富など遥かに小さなものであり、彼女は大胆で並外れた商才を持った貿易家として宮廷で知られている。彼女の配下には1200騎の騎兵が従っており、他にそのような女性は存在しない。彼女はメッカ巡礼のために船を供用しているが、その中でも大巡礼船として知られるラヒーミー号が600人の乗客とともにヨーロッパ兵に捕らえられ、公式の返還要求も拒否されたことが宮廷に伝わると、憤激が聖都全域に響き渡った。後に船は返還され、乗客も無事だったが、メッカ巡礼を阻んだ者たちに対する遺恨は彼女の中に残った。"
+ women_history_events.99.t:0 "マリヤム＝ウッ＝ザマーニー"
+ women_history_events.99.d:0 "ヒール・クンワーリー妃は、夫であるアクバル皇帝との間に息子をもうけたことで、マリヤム＝ウッ＝ザマーニー（時代のマリヤ）の称号を与えられた。皇帝が3人の息子に恵まれることを予言した聖者の名にちなみ、男の子はサリームと名付けられた。彼女は3番目の妃であったが、事実上の皇太子の母として他の妃よりも高遇された。彼女はヒンドゥー教徒であり、彼女との結婚によりアクバルはヒンドゥー教と配下のヒンドゥー諸国をより好意的な目で見るようになった。アクバルは在位中、彼女の出身家から強力な支援を受けた。またラージプート・ヒンドゥー王朝の王女を妃とすることで、信仰している宗教に関わらず全ての臣民のパードシャー（最高君主）であることを自ら現した。国の公式文書であるファルマンの布告は通常、皇帝の専権事項とされ宮廷の女性に許された例はほとんどないが、彼はマリヤム＝ウッ＝ザマーニーにその特権を与えるほどの信頼を寄せた。彼女はファルマンの布告に際して、ワリ・ニマト・ベガム（神の恩寵）の称号を用いた。彼女はスパイス、絹、その他様々な物品の貿易によって財産を蓄える傍ら、庭園、井戸、モスクの造営にも取り組んでいる。マリヤム＝ウッ＝ザマーニーの私的な財産に比べれば、ヨーロッパ諸国の王が保持する富など遥かに小さなものであり、彼女は大胆で並外れた商才を持った貿易家として宮廷で知られている。彼女の配下には1200騎の騎兵が従っており、他にそのような女性は存在しない。彼女はメッカ巡礼のために船を供用しているが、その中でも大巡礼船として知られるラヒーミー号が600人の乗客とともにヨーロッパ兵に捕らえられ、公式の返還要求も拒否されたことが宮廷に伝わると、憤激が聖都全域に響き渡った。後に船は返還され、乗客も無事だったが、メッカ巡礼を阻んだ者たちに対する遺恨は彼女の中に残った。"
  women_history_events.99.a:0 "彼女に財務の管理を任せよう、勘定が得意なことは自身が証明しているところだ。"
  women_history_events.99.b:0 "彼女の抜け目ない商才は、交易にも役に立つだろう。"
  women_history_events.100.t:0 "フランチシカ・ウルシュラ・ラジヴィオヴァ"
@@ -466,8 +466,8 @@
  desc_wih_pokou:0 "コートジボワールの入植者は、彼らにコモーエ川を渡らせるため、自らの幼い息子を犠牲にした彼らの指導者であるポコウを讃え、「子は死んだ」を意味するバロウと名乗った。"
  wih_heonanseolheon:0 "許蘭雪軒"
  desc_wih_heonanseolheon:0 "許蘭雪軒の初期の作品においては、唐から伝承した流儀と、彼女のありのままの心象が異彩を放っていたが、その後の結婚生活は不幸なもので、それが彼女に既婚女性の困窮と苦しみを詠った作品を作らせるもととなった。"
- wih_mariamuzzamani:0 "マリヤム・ウッザマーニー"
- desc_wih_mariamuzzamani:0 "抜け目のない女性実業家であり、最愛の妻と母であり、また勅書の発行を許された数少ない女性の一人であったマリヤム・ウッザマーニーは、ムガル帝国の宮殿において裕福で影響力のある女性であった。"
+ wih_mariamuzzamani:0 "マリヤム＝ウッ＝ザマーニー"
+ desc_wih_mariamuzzamani:0 "抜け目のない女性実業家であり、最愛の妻と母であり、また勅書の発行を許された数少ない女性の一人であったマリヤム＝ウッ＝ザマーニーは、ムガル帝国の宮殿において裕福で影響力のある女性であった。"
  women_history_events.14.d:0 "イタリアのフィレンツェで生まれたカトリーヌ・ド・メディシスは、フランス王アンリ2世に14歳で嫁いだ。アンリ2世はカトリーヌより愛人であるディアーヌ・ド・ポワティエの方を愛し、国務にも参加させた。彼は馬上槍試合で顔に槍を受けて死亡し、フランソワ2世が王位を継いだ。カトリーヌは息子のフランソワに対して絶大な影響力を持ち、彼の国務は全て次のような言葉から始まっていた。「これは我が母后が同意されるところであり、予も母后の全ての意見に同意し、故に予はこれに満足し次の命令を発する…」"
  women_history_events.31.d:0 "初代セカンドレディにして第二代ファーストレディであるアビゲイル・アダムズは、合衆国の初代副大統領にして第二代大統領ジョン・アダムズの妻である。彼女は博識かつ公明正大、さらに深い知性をも兼ね備えた女性であり、彼女の夫はしばしば政治的問題や政府のことについて彼女の助言を求めた。彼女が政治活動、特に女性の権利保護に積極的に取り組んだことから、アダムズ夫妻の政敵は皮肉を込めて彼女を「夫人大統領」と呼んだ。ジョン・アダムズ当ての彼女の手紙にはこのようにある。「女性を気に留め、彼女たちに寛容かつ好意的に接するように。世の夫に無制限の権利を与えるようなことはしてはいけない。すべての男はなれるものならいつでも暴君になることを覚えておきなさい。もし女性に対して特別な配慮と親切を欠くことがあれば、反乱を扇動する決意を固めています。私達は女性の声や立場が反映されていないいかなる法にも拘束されることはないでしょう」彼女は既婚女性の財産権を擁護しており、女性は夫の付属物であることに満足すべきではなく、女性の利益を代弁していない法に従う必要もなく、また女性は教育を受けるべきであると信じている。"
  women_history_events.87.d:0 "チェロキー・ナンシー・ワードやナニエヒと呼ばれる最愛の女は、評議会に座って、他の最愛の女や酋長と一緒に決断する。彼女は、他の国や文化の人々と平和的に共存していなければならないと信じている人々の代表であり、和平交渉人として知られている。彼女の最初の夫は、タリワの戦いで死んだキングフィッシャーであった。ナニエヒは戦い続け、チェロキーの人々を勝利に導いた。彼女の勇気は彼女を酋長の部族評議会の評議員にした 「ギガウ」の称号を授与された。女性の部族評議員が、彼女を指導者に任命し、彼女は人々の代表と交渉人となった。リディア・ウィリアム・ビーン夫人の植民地を襲撃した時に、捕らえられた彼女をナニエヒは救い、健康状態に戻るまで看病した後、彼女から新しい織機技術を教わった。新しい製織技法は、チェロキー社会における女性の役割を変えた。女が伝統的な仕事である製織を引き受けている時、男たちが栽植を任されていた。二匹の乳牛は、破壊された植民地からビーン夫人によって救出され、ナニエヒに放牧方法と乳製品の食べ方を教えた。このことは狩猟が不調の時に、チェロキー族を維持するのに役立った。アタクラクラ酋長はナニエヒに外交術を教え、ヨーロッパの外交官に会ったときには、彼らの間には女性の外交官がいなかったため非常に驚かれた。彼らの指導者はそのような重要な仕事を女性に任せてはいけないと愕然とした。ナニエヒは答えた。「あなたは女性が常に何者とも見做されていないと思っていますが、私たちはあなたの母親です、あなたは私たちの息子です。私たちの涙は平和のためであり、続けてみましょう。この平和は永遠に続かなければなりません。あなたの妻の息子は私たちのものであり、私たちの息子はあなたのものです。あなたの妻に私の言葉を聞いてみてください」"
