--- a/source/localisation/core_l_english.yml
+++ b/source/localisation/core_l_english.yml
@@ -234,7 +234,7 @@
  LAG_BEHIND_HEADER:0 "$NAME$は遅れています！"
  LAG_BEHIND_TEXT:0 "彼/彼女が追いつくように、ゲームの速度が下げられました。"
  ECONOMY_ADVISOR_COST:0 "（$SKILL|Y$）$NAME$$COST|Y2$¤"
- ECONOMY_ADVISOR_NO_COST:0 "顧問を雇っていない！"
+ ECONOMY_ADVISOR_NO_COST:0 "顧問を雇っていません！"
  ECONOMY_ADVISOR_COST_MODIFIER:0 "顧問への給与は次の補正を受けています："
  ECONOMY_ADVISOR_COST_MODIFIER_YEAR:0 "今年：+$VAL|%1Y$（毎年 +$YEARLY|Y2$）"
  ECONOMY_ADVISOR_COST_CULTURE:0 "統治者の文化のいずれかの顧問により：\n"
@@ -570,7 +570,7 @@
  CHANGE_CULTURE_TO:0 "$CULTURE$に文化を変更"
  DEVELOP_PROVINCE:0 "州の開発"
  EXPLOIT_PROVINCE:0 "開発度を利用"
- HRE_VOTE:0 "票を投じる"
+ HRE_VOTE:0 "投票"
  PAPACY_AGE:0 "年齢："
  SORT_BY_AGE:0 "年齢で並べ替え"
  SORT_BY_HOME:0 "地元の州で並べ替え"
@@ -915,17 +915,17 @@
  CHAT_ERROR_MUTEUNMUTE_SELF:0 "自分自身をmuteまたはunmuteすることはできません！"
  NAVY_COMBAT_TOOLTIP_DISENGAGED:0 "§YThis ship has disengaged and will rejoin the fleet once the battle is over.§!"
  NAVY_COMBAT_TOOLTIP_DEMORALIZED:0 "§YThis ship is demoralized and will only try to disengage for now.§!"
- UNIT_VIEW_CHOOSE_LEADER_MERCENARY_COMPANY:0 "This is a mercenary company, and they decide on their own leader."
+ UNIT_VIEW_CHOOSE_LEADER_MERCENARY_COMPANY:0 "これは傭兵団であり、彼らは自身で指揮官を決定します。"
  MAPMODE_SUPER_REGION_DESC:0 "所属する亜大陸に応じて州を色分けします。州をマウスオーバーすると、属する地域、地方、亜大陸が表示されます。"
  PLAYER_AI_PREFS_OPTION_TITLE_manage_estates:0 "階級を管理"
  PLAYER_AI_PREFS_OPTION_DESC_manage_estates:0 "Controls whether the AI may take any actions to manage your Estates"
  ACHIEVEMENTS_DISABLED_ENDGAME_TAGS_BLOCKED:0 "§Y- 'Limited Country Forming' Option must be set to 'Yes'.§!"
  SETTINGS_ACCESSIBILITY:0 "アクセシビリティ"
  SETTINGS_ACCESSIBILITY_TTS:0 "マルチプレイヤーのテキストチャットを読み上げる"
- SETTINGS_ACCESSIBILITY_STT:0 "Multiplayer Chat Speech To Text"
- SETTINGS_ACCESSIBILITY_VISUAL_ALERTS:0 "Multiplayer Chat Visual Alerts"
+ SETTINGS_ACCESSIBILITY_STT:0 "マルチプレイヤーのテキストチャットを読み上げる"
+ SETTINGS_ACCESSIBILITY_VISUAL_ALERTS:0 "マルチプレイヤーチャットのビジュアル警告"
  SETTINGS_ACCESSIBILITY_USE_STT_SHORTCUT:0 "Speech To Text Toggle Shortcut"
- SETTINGS_ACCESSIBILITY_CHAT_LARGE_FONTS:0 "Multiplayer Chat Large Fonts"
+ SETTINGS_ACCESSIBILITY_CHAT_LARGE_FONTS:0 "マルチプレイヤーチャットの大きいフォント"
  SETTINGS_ACCESSIBILITY_STT_SHORTCUT_INPUT:0 "Multiplayer Chat Speech To Text Shortcut"
  CHAT_CVAA_MESSAGE:0 "$NAME$が$MESSAGE$に言った"
  CHAT_CVAA_SYSTEM_NAME:0 "システム"
